# openwrt-allocator-packages

./: README.md
allocators/gperftools/: Makefile
allocators/hoard/: Makefile
allocators/mimalloc/: Makefile
allocators/rpmalloc/: Makefile
allocators/rpmalloc/patches/: 0001-add-cross-compile-setup-from-environment.patch
bench/: README.md  mymalloc.c
bench/alloc-test/: Makefile
bench/alloc-test/src/: CMakeLists.txt
bench/barnes/: Makefile
bench/barnes/src/: CMakeLists.txt  code.c  code_io.c  mymalloc.c
bench/cache-scratch/: Makefile
bench/cache-scratch/src/: CMakeLists.txt
bench/cache-thrash/: Makefile
bench/cache-thrash/src/: CMakeLists.txt
bench/cfrac/: Makefile
bench/cfrac/src/: CMakeLists.txt  pcfrac.c
bench/espresso/: Makefile
bench/espresso/src/: CMakeLists.txt  utility.h
bench/larson/: Makefile
bench/larson/src/: CMakeLists.txt  larson.cpp
bench/malloc-benchmarks/: Makefile
bench/malloc-benchmarks/files/: malloc-bench-result2csv.sh  run-malloc-benchmarks.sh
bench/malloc-large/: Makefile
bench/malloc-large/src/: CMakeLists.txt  malloc-large.cpp
bench/malloc-test/: Makefile
bench/malloc-test/src/: CMakeLists.txt  malloc-test.c
bench/mstress/: Makefile
bench/mstress/src/: CMakeLists.txt  mstress.c  mymalloc.h
bench/rpmalloc-benchmark/: Makefile
bench/rpmalloc-benchmark/patches/: 0002-disable-hoard.patch  0005-disable-gperftools.patch
bench/rptest/: Makefile
bench/rptest/src/: CMakeLists.txt  benchmark.h  mymalloc.h  rptest.c
bench/shbench/: Makefile
bench/shbench/src/: CMakeLists.txt  SH8BENCH.C  readme.md  sh6bench-new.c  sh6bench.c  sh8bench-new.c
bench/tinymembench/: Makefile
bench/tinymembench/patches/: 0001-use-cmake-for-makefile-generation.patch
bench/xmalloc-test/: Makefile
bench/xmalloc-test/src/: CMakeLists.txt  mymalloc.c  xmalloc-test.c
cfrac/: Makefile
jemalloc/: Makefile
libjemalloc/: Makefile
libmimalloc/: Makefile
malloc-benchmarks/: Makefile
mimalloc/: Makefile
rpmalloc-benchmark/: Makefile
rpmalloc-benchmark/patches/: 0003-fix-nedmalloc-GNU_SOURCE-definition.patch
rpmalloc/patches/: 0001-add-setup-from-env-for-cross-compilation.patch
tools/time/: Makefile
tools/time/patches/: 0001-enforce_usage_of_wait3_on_cross_compile.patch
